--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.36.1"
+  },
+  "dependencies": {
+    "otpauth": "^9.1.3"
   }
 }
